added js toggle switch dark/light mode

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Poppins:wght@100;300&family=Raleway:wght@100;200;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./styles.css">
     <script src="https://kit.fontawesome.com/a91a109135.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src = "./main.js"></script>
     <title>Graham Jantz - Portfolio</title>
   </head>
 
@@ -35,6 +36,11 @@
         <li><a href="./about.html">about</a></li>
         <li><a href="./contact.html">contact</a></li>
       </ul>
+      <div class = "view-mode-button" id = "viewModeButton">
+        <input type="checkbox" name="switch" id = "switch" onclick = "lightMode()"/>
+        <label for = "switch"></label>
+        <h4 id = "view-mode-label" class = "view-mode-label">light mode</h4>
+      </div>
     </main>
 
     <!-- ----FOOTER SECTION---- -->
