--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Poppins:wght@100;300&family=Raleway:wght@100;200;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./styles.css">
     <script src="https://kit.fontawesome.com/a91a109135.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src = "./main.js"></script>
     <title>Graham Jantz - Portfolio</title>
   </head>
 
@@ -47,6 +48,13 @@
         <li><a href="mailto:grahammrjantz@gmail.com" target = "_blank"><i class="fa-solid fa-envelope"></i></a></li>
         <li><a href="https://github.com/grahamjantz" target = "_blank"><i class="fa-brands fa-github"></i></a></li>
       </ul>
+      <div class = "theme-button">
+        <!--<h4>theme: </h4>-->
+        <select class = "select__input" id = "selTheme">
+          <option value = "dark">dark</option>
+          <option value = "light">light</option>
+        </select>
+      </div>
     </footer>
   </body>
 </html>
