fixed theme switching issue, completed responsiveness on all pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Poppins:wght@100;300&family=Raleway:wght@100;200;300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles/universal-styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles/index-styles.css">
     <script src="https://kit.fontawesome.com/a91a109135.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src = "./main.js"></script>
     <title>Graham Jantz - Portfolio</title>
@@ -22,7 +23,6 @@
           <li class = "nav-link"><a href="./portfolio.html">portfolio</a></li>
           <li class = "nav-link"><a href="./about.html">about</a></li>
           <li class = "nav-link"><a href="./contact.html">contact</a></li>
-          <li></li>
         </ul>
       </nav>
     </header>
