--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Poppins:wght@100;300&family=Raleway:wght@100;200;300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles/universal-styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles/about-styles.css">
     <script src="https://kit.fontawesome.com/a91a109135.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src = "./main.js"></script>
     <title>Graham Jantz - Portfolio</title>
@@ -46,14 +47,16 @@
           <li id = "html">HTML</li>
           <li id = "css">CSS</li>
           <li id = "java">JavaScript</li>
+          <li id = "git">Git / GitHub</li>
         </ul>
-        <ul class = "about-section-sub-nav">
-          <li><a href="#">resume</a></li>
-          <li><a href="./portfolio.html">portfolio</a></li>
-          <li><a href="./about.html">about</a></li>
-          <li><a href="./contact.html">contact</a></li>
-        </ul>
+        
       </div>
+      <ul class = "hero-section-sub-nav about-section-sub-nav">
+        <li><a href="#">resume</a></li>
+        <li><a href="./portfolio.html">portfolio</a></li>
+        <li><a href="./about.html">about</a></li>
+        <li><a href="./contact.html">contact</a></li>
+      </ul>
     </main>
 
     <!-- ----FOOTER SECTION---- -->
